--- a/apps/web/src/app/surveys/components/signature-question.component.scss
+++ b/apps/web/src/app/surveys/components/signature-question.component.scss
@@ -42,3 +42,18 @@
   margin-top: 8px;
   color: #f44336;
 }
+
+@media (max-width: 480px) {
+  .signature-canvas {
+    height: 120px;
+  }
+
+  .signature-actions {
+    flex-wrap: wrap;
+  }
+
+  .signature-actions button {
+    flex: 1;
+    min-width: 100px;
+  }
+}
