--- a/apps/web/src/app/builder/question-dialog.component.scss
+++ b/apps/web/src/app/builder/question-dialog.component.scss
@@ -339,6 +339,27 @@
   }
 }
 
+.flow-field {
+  width: 120px;
+  flex-shrink: 0;
+
+  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+    display: none;
+  }
+}
+
+.option-item.has-flow {
+  flex-wrap: wrap;
+
+  @media (max-width: 600px) {
+    .flow-field {
+      width: 100%;
+      margin-left: 56px;
+      margin-top: -4px;
+    }
+  }
+}
+
 .remove-btn {
   color: var(--text-hint);
 
